test/Fail/Issue8454/A.agda
module Issue8454.A where
open import Agda.Primitive public renaming (Set to Type)
